test/fails/bad_generics/infer5.lgl
`t id<`t>(`t x) {
    return x;
}

`t add_op<`t>(`t x, `t y) {
    t result = x + y;
    return result;
}

void main() {
    print add_op(id([1., 2.]), id(3)); // Nesting should still be caught
}